@@ -1,3 +1,12 @@
+2009-02-03  Joseph Myers  <joseph@codesourcery.com>
+
+	PR c/29129
+	* c90-arraydecl-1.c: Do not expect error for [*] in abstract
+	declarator.
+	* vla-6.c: Likewise.  Expect warning not error for [*] lexically
+	inside function prototype but not part of parameter declarator.
+	* vla-11.c: New test.
+
 2009-02-03  Jason Merrill  <jason@redhat.com>
 
 	* g++.dg/warn/main-4.C: New test.
